--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZMIhR6cWEDuIxLvAHGp7hNL_7OkeGM38&v=weekly"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZMIhR6cWEDuIxLvAHGp7hNL_7OkeGM38&v=weekly&callback=Function.prototype"
 ></script>
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
